<resources>
    <string name="google_maps_key">AIzaSyC2jxWJzCJIzfptnapht6BcoRy5f7mXHAQ</string>
    <string name="CarBrand">برند خودرو</string>
    <string name="InsuranceType">نوع مورد</string>
     <string name="agaring">"درخواست آنلاین n\ لوازم یدکی"</string>
    <string name="app_name">کلینیک ماشین</string>
    <string name="AddCar">اضافه کردن خودرو</string>
    <string name="AreYouSure">آیا برای حذف این مورد مطمئن هستید؟</string>
    <string name="Brand_Prompt">انتخاب برند</string>
    <string name="CarBodyInsurance">آیا بیمه بدنه دارید؟</string>
    <string name="CarChassisNumber">شماره شاسی خودرو</string>
    <string name="CarColor">رنگ خودرو</string>
    <string name="CarCreatedKM">کیلومتر خودرو</string>
    <string name="CarCreatedYear">سال تولید خودرو</string>
    <string name="CarEventConsumables">تعویض لوازم مصرفی</string>
    <string name="CarEventInsurance">بیمـه و معاینه فنی</string>
    <string name="CarEventRepair">تعمیر اساسی خودرو</string>
    <string name="CarEventSale">آگهی کردن فروش خودرو</string>
    <string name="CarForSale">خودروهای فروشی</string>
    <string name="CarGearBox">نوع گیربکس خودرو</string>
    <string name="CarGearBoxAuto">اتوماتیک</string>
    <string name="CarGearBoxHandly">دستی</string>
    <string name="CarName">مدل خودرو</string>
    <string name="CarOptionalInfo">اطلاعات اختیاری، جهت بازیابی خودرو، درصورت حذف شدن برنامه یا تغییر تلفن همراه</string>
    <string name="CarPersonInsurance">آیا بیمه شخص ثالث دارید؟</string>
    <string name="CarUsedAverage">در یک روز چند کیلومتر از خودرو استفاده میکنید؟(فقط عدد)</string>
    <string name="ChangeCar">انتقال خودرو به دیگری</string>
    <string name="ChooseDate">انتخاب تاریخ</string>
    <string name="ConnetToPolice">درحال برقراری ارتباط با پلیس راهور</string>
    <string name="ConsumableChange">تعوض نموده اید</string>
    <string name="DatePickerCancle">بیخیال</string>
    <string name="DatePickerChoose">انتخاب</string>
    <string name="DatePickerToday">امروز</string>
    <string name="DeleteCommit">حذف با موفقیت انجام شد</string>
    <string name="EditCommit">ویرایش با موفقیت انجام شد</string>
    <string name="EditProfile">ویرایش پروفایل</string>
    <string name="EmptyCahngeTitle">لطفا عنوان مورد تعویضی را وارد نمایید</string>
    <string name="EmptyCar">شما هیچ خودرویی را در برنامه ثبت نکرده اید، جهت اضافه کردن یک خودروی جدید از منوی اضافه کردن خودرو استفاده کنید</string>
    <string name="EmptyCarAverage">روزانه چند کیلومتر از خودرو استفاده میکنید؟</string>
    <string name="JustNumber">فقط عدد وارد نمایید</string>
    <string name="EmptyCarBody">لطفا تاریخ دریافت بیمه بدنه را انتخاب نمایید</string>
    <string name="EmptyCarBrand">لطفا برند را انتخاب نمایید</string>
    <string name="EmptyCarChassis">لطفا شماره شاسی خودرو را وارد نمایید</string>
    <string name="EmptyCarColor">لطفا رنگ خودرو را وارد نمایید</string>
    <string name="EmptyCarGearBox">لطفا نوع گیربکس خودرو را انتخاب نمایید</string>
    <string name="EmptyCarKM">لطفا کیلومتر خودرو را وارد نمایید</string>
    <string name="EmptyCarName">لطفا مدل خودرو را وارد کنید</string>
    <string name="EmptyCarPelak">لطفا پلاک خودرو را کامل وارد نمایید</string>
    <string name="EmptyCarPerson">لطفا تاریخ دریافت بیمه ثالث را انتخاب نمایید</string>
    <string name="EmptyCarYear">لطفا سال تولید خودرو را وارد نمایید</string>
    <string name="EmptyChangeBrand">لطفا برند جنس را وارد نمایید</string>
    <string name="EmptyChangeDate">لطفا تاریخ را انتخاب نمایید</string>
    <string name="EmptyChangeKM">لطفا کیلومتر خودرو زمان تعویض را وارد نمایید</string>
    <string name="EmptyChangeMoney">لطفا مبلغ پرداختی را وارد نمایید</string>
    <string name="EmptyChangeNext">لطفا کیلومتر بعدی جهت تعویض را وارد نمایید</string>
    <string name="EmptyChangeNextError">میزان کیلومتر بعدی جهت تعویض صحیح نمیباشد</string>
    <string name="EmptyInsuranceBrand">لطفا نام نمایندگی را وارد نمایید</string>
    <string name="EmptyInsuranceType">لطفا نوع را انتخاب نمایید</string>
    <string name="EmptyNegativeGradeBarcode">لطفا شماره سریال را وارد نمایید</string>
    <string name="EmptyPoliceFineBarcode">لطفا بارکد را وارد نمایید</string>
    <string name="EmptyPoliceFineCaptcha">لطفا متن امنیتی را وارد نمایید</string>
    <string name="EmptyRepairKM">لطفا کیلومتر خودرو زمان تعمیر را وارد نمایید</string>
    <string name="EmptyRepairTitle">لطفا عنوان مورد تعمیری را وارد نمایید</string>
    <string name="ErrorConnectToPolice">ارتباط با پلیس راهور برقرار نشد</string>
    <string name="ErrorDeleteWhenEdit">خطا! عملیات ویرایش تکمیل نشده</string>
    <string name="ErrorGetNegativeGrade">اطلاعاتی از این گواهینامه در دسترس نمیباشد</string>
    <string name="ErrorGetPoliceFine">اطلاعاتی از این خودرو در دسترس نمیباشد</string>
    <string name="GetCaptchaError">متن امنیتی را اشتباه وارد کرده اید</string>
    <string name="GetCaptchaOk">CaptchaOk</string>
    <string name="Ignor">بیخیال</string>
    <string name="InfringementBill">شناسه قبض</string>
    <string name="InfringementCity">شهر تخلف</string>
    <string name="InfringementCode">کد تخلف</string>
    <string name="InfringementDate">تاریخ</string>
    <string name="InfringementDiscription">شرح تخلف</string>
    <string name="InfringementLocation">محل تخلف</string>
    <string name="InfringementPay">شناسه پرداخت</string>
    <string name="InfringementPrice">مبلغ</string>
    <string name="InfringementSerial">سریال</string>
    <string name="InfringementType">نوع تخلف</string>
    <string name="InsuranceDate">تاریخ دریافت</string>
    <string name="InsuranceGet">دریافت کرده اید</string>
    <string name="InsuranceName">نام نمایندگی</string>
    <string name="Insurance_Prompt">انتخاب نوع</string>
    <string name="AdvertisePrompt">انتخاب استان</string>
    <string name="Iran">ایران</string>
    <string name="IsEmpty">وارد نشده</string>
    <string name="LastDateInsertInfo">آخرین تاریخ ثبت اطلاعات</string>
    <string name="NegativeGrade">نمره منفی گواهینامه</string>
    <string name="NegativeGradeBarcode">سریال روی گواهینامه</string>
    <string name="NegativeGradeGet">گرفتن نمره منفی</string>
    <string name="NegativeGradeNew">گرفتن نمره منفی جدید</string>
    <string name="NewEvent">اضافه کردن مورد جدید</string>
    <string name="NewEventChangeBrand">برند جنس</string>
    <string name="NewEventChangeDate">تاریخ تعویض</string>
    <string name="NewEventChangeKM">کیلومتر در زمان تعویض</string>
    <string name="NewEventChangeMoney">مبلغ پرداختی(تومان)</string>
    <string name="NewEventChangeNextKM">کیلومتر بعدی جهت تعویض</string>
    <string name="NewEventChangeTitle">عنوان مورد تعویضی</string>
    <string name="NewEventRepairDate">تاریخ تعمیر</string>
    <string name="NewEventRepairKM">کیلومتر در زمان تعمیر</string>
    <string name="NewEventRepairTitle">عنوان مورد تعمیری</string>
    <string name="NewEventRepairWhy">دلیل تعمیر</string>
    <string name="No">خیر</string>
    <string name="NotSaveEnything">هیچ موردی ثبت نشده</string>
    <string name="OtherCar">اطلاعات سایر خودروها</string>
    <string name="Advertise">مراکز و آگهی ها</string>
    <string name="PleaseWait">شکیبا باشید ...</string>
    <string name="PliceFineGet">دریافت خلافی</string>
    <string name="PoliceFine">دریافت خلافی</string>
    <string name="PoliceFineBarcode">بارکد پشت کارت ماشین</string>
    <string name="PoliceFineBarcodeNew">کارت جدید</string>
    <string name="PoliceFineBarcodeOld">کارت قدیم</string>
    <string name="PoliceFineEnterCaptcha">متن امنیتی تصویر را وارد کنید</string>
    <string name="PoliceFineNew">گرفتن خلافی جدید</string>
    <string name="PoliceFineOk">PoliceFineOk</string>
    <string name="ProfileName">نام شما</string>
    <string name="ProfilePhone">09123456789</string>
    <string name="RepairChange">تعمیر نموده اید</string>
    <string name="Rial">ریال</string>
    <string name="SaveCommit">ثبت با موفقیت انجام شد</string>
    <string name="SaveException">خطلا در ثبت اطلاعات</string>
    <string name="SaveInfo">ثبت اطلاعات</string>
    <string name="SignUpSystem">ثبت نام در سامانه جامع :</string>
    <string name="TotalPoliceFine">مجموع تخلفات :</string>
    <string name="Update_Information">بروزرسانی اطلاعات سرور</string>
    <string name="Yes">بله</string>
    <string name="YouCar">خودروهای شما</string>
    <string name="Search">جستجو</string>
    <string name="SearchText">متن جهت جستجو</string>
    <string name="SearchEmpty">متن جهت جستجو را وارد نمایید</string>
    <string name="RequestAdvertise">ارسال آگهی جدید</string>
    <string name="ChosseImage">انتخاب تصویر</string>
    <string name="Title">عنوان</string>
    <string name="Tel">تلفن</string>
    <string name="Address">آدرس</string>
    <string name="AdvertiseImageEmpty">یک تصویر برای آگهی انتخاب کنید</string>
    <string name="AdvertiseTitleEmpty">عنوان آگهی را وارد کنید</string>
    <string name="AdvertiseTelEmpty">تلفن آگهی را وارد کنید</string>
    <string name="AdvertiseCityEmpty">استان آگهی را انتخاب کنید</string>
    <string name="AdvertiseAddressEmpty">آدرس آگهی را وارد کنید</string>
    <string name="ChooseFromCamera">دوربین</string>
    <string name="ChooseFromGallery">گالری</string>
    <string name="Change">تعویض</string>
    <string name="Get">دریافت</string>
    <string name="GetDataProgress">درحال دریافت اطلاعات</string>
    <string name="GetOk">GetOk</string>
    <string name="GetError">اطلاعاتی دریافت نشد</string>
    <string name="AgaringUser">عضو سامانه آگارینگ : </string>
    <string name="Store">فروشگاه</string>
    <string name="Call">برقراری تماس</string>
    <string name="NewAdvertise">جهت ثبت آگهی، درخواست خودرا بوسیله یکی از روش های زیر برای ما ارسال نمایید</string>
    <string name="SendTelegram">ارسال پیام به تلگرام ما</string>
    <string name="SendInstagram">ارسال پیام به اینستاگرام ما</string>
    <string name="SendWhatsapp">ارسال پیام به واتس اپ ما</string>
    <string name="NotInstallTelegram">نرم افزار تلگرام روی دستگاه شما نصب نیست</string>
    <string name="EmptyProfileName">لطفا نام خودرا وارد نمایید</string>
    <string name="Version">نسخه</string>
    <string name="CallUs">راههای ارتباط با ما</string>
    <string name="Website">وبسایت کلینیک ماشین</string>
    <string name="WebSiteLink">http://www.clinicemashin.ir</string>
    <string name="TelegramLink">https://telegram.me/iranlandcruiser</string>
    <string name="InstagramLink">iranlandcruiser</string>
    <string name="AgaringLink">http://www.agaring.ir</string>
    <string name="NotificationSee">برای مشاهده کامل کلیک کنید</string>
    <string name="Choose">انتخاب</string>
    <string name="NewLocation">ثبت مکان پارک جدید</string>
    <string name="ShowOnMap">نمایش محل پارک روی نقشه</string>
    <string name="WaitingFindLocation">در حال یافتن موقعیت شما، لطفا شکیبا باشید</string>
</resources>