<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="about"
            type="ir.clinicemashin.clinicemashin.viewmodels.FragmentAboutViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/MainFragment"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/MainWhite"
            android:textSize="@dimen/_11sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/_2sdp"
            />


        <TextView
            android:id="@+id/FragmentAboutVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/MainWhite"
            android:textSize="@dimen/_11sdp"
            android:gravity="center"
            android:text="@string/Version"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/layoutborderwhite"
            android:padding="@dimen/_5sdp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/MainYellow"
                android:textSize="@dimen/_11sdp"
                android:gravity="center"
                android:text="@string/CallUs"
                />

            <LinearLayout
                android:id="@+id/FragmentAboutTelegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/save_info_button"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MainWhite"
                    android:gravity="center"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/SendTelegram"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/FragmentAboutInstagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/save_info_button"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MainWhite"
                    android:gravity="center"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/SendInstagram"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/FragmentAboutWhatsApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/save_info_button"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MainWhite"
                    android:gravity="center"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/SendWhatsapp"
                    />


            </LinearLayout>

            <TextView
                android:id="@+id/FragmentAboutWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/MainWhite"
                android:textSize="@dimen/_11sdp"
                android:gravity="center"
                android:text="@string/Website"
                android:layout_marginTop="@dimen/_10sdp"
                />


        </LinearLayout>

    </LinearLayout>

</layout>
